# moonshot-ui

./: .gitignore  .gitlab-ci.yml  APKBUILD.in  APKBUILD.in.alpine310  APKBUILD.in.alpine38  INSTALL  Makefile.am  Makefile.in  PKGBUILD.in  README.cli  README.md  README.webprovisioning  README.windows  aclocal.m4  autogen.sh  config.h.in  config.vapi  configure  configure.ac  enable-moonshot-cli  enable-moonshot-cli-unlock  enable-moonshot-cli.sh  enable-moonshot-txt-ui-gnome-keyring  enable-moonshot-txt-ui-pam  flatstore-users  moonshot-client.sln  moonshot-dbus-launch  moonshot-ui.spec  moonshot-ui.spec.in  moonshot-webp.desktop.in  moonshot.desktop.in  org.janet.Moonshot.conf.in  org.janet.Moonshot.service.in  org.janet.Moonshot.service.mac
Installer/: License.rtf  Moonshot.pkgproj  Readme.rtf  Welcome.rtf  deploy_mech.sh  post_install.sh
Installer/LICENSES/: DBUS.LICENSE  LIBCONFUSE.LICENSE  Moonshot-Combined-Licences-Text.rtf
Moonshot/: AppDelegate.h  AppDelegate.m  Info.plist  Localizable.strings  MSTConstants.h  MSTIdentitySelectorViewController.h  MSTIdentitySelectorViewController.m  MSTRequestGetIdentityScriptCommand.h  MSTRequestGetIdentityScriptCommand.m  MSTResultGetIdentityScriptCommant.h  MSTResultGetIdentityScriptCommant.m  MSTStatusGetIdentityScriptComment.h  MSTStatusGetIdentityScriptComment.m  MSTWakeUpScriptCommand.h  MSTWakeUpScriptCommand.m  MainViewController.h  MainViewController.m  Moonshot.sdef  ViewController.m  main.m
Moonshot.xcodeproj/: project.pbxproj
Moonshot/Base.lproj/: Main.storyboard
MoonshotTests/: MoonshotTests.m
MoonshotUITests/: MoonshotUITests.m
debian/: changelog  control  copyright  libmoonshot0.install  libmoonshot1.install  moonshot-ui.examples  moonshot-ui.install  moonshot-ui.links  moonshot-ui.lintian-overrides  rules
example/: sample.xml
examples/: client.c  confirm-ca.c  service-selection.c
libmoonshot/: libmoonshot-common.c  libmoonshot-common.h  libmoonshot-dbus.c  libmoonshot-macos.c  libmoonshot-msrpc.c  libmoonshot.def  libmoonshot.h  libmoonshot.la  libmoonshot.lo  libmoonshot.vapi  moonshot-msrpc.acf  moonshot-msrpc.idl
mac/: launcher.sh  moonshot-ui.bundle  moonshot-ui.icns  moonshot-ui.plist
macos-ui/: Makefile.am  dbus_check.sh  filemanifest.txt
macos-ui/Installer/: Welcome.rtf  create_dmg_with_icon.sh  deploy_mech.sh  moonshot-dmg-volumeicons.icns  post_install.sh
macos-ui/Installer/LICENSES/: JANSSON.LICENSE  LIBRADSEC.LICENSE  MOONSHOT.LICENSE
macos-ui/Moonshot/: AppDelegate.h  AppDelegate.m  Info.plist  Localizable.strings  MSTConstants.h  MSTIdentitySelectorViewController.h  MSTIdentitySelectorViewController.m  MainViewController.h  MainViewController.m  MoonshotScript.sdef  ViewController.h  ViewController.m  X509Cert.h  X509Cert.m
macos-ui/Moonshot.xcodeproj/: project.pbxproj
macos-ui/Moonshot/Base.lproj/: Main.storyboard
macos-ui/Moonshot/Categories/: NSDate+NSDateFormatter.h  NSWindow+Utilities.h  NSWindow+Utilities.m
macos-ui/Moonshot/CustomWindows/: AboutWindow.xib  AddIdentityWindow.h  AddIdentityWindow.m  AddIdentityWindow.xib  ConnectIdentityWindow.m  ConnectIdentityWindow.xib  EditIdentityWindow.m  EditIdentityWindow.xib  TrustAnchorHelpWindow.h  TrustAnchorWindow.h  TrustAnchorWindow.m
macos-ui/Moonshot/DBus/: MSTDBusServer.h  MSTDBusServer.m
macos-ui/Moonshot/Data/: MSTGetIdentityAction.h  MSTGetIdentityAction.m  MSTIdentityDataLayer.h  MSTIdentityDataLayer.m  MSTIdentityImporter.h  MSTIdentityImporter.m
macos-ui/Moonshot/Data/Models/: Identity.h  Identity.m  SelectionRules.h  SelectionRules.m  TrustAnchor.h  TrustAnchor.m
macos-ui/MoonshotTests/: MoonshotTests.m
macos-ui/Uninstaller/Moonshot Uninstaller/: AppDelegate.h  AppDelegate.m  UninstallViewController.h  UninstallViewController.m  main.m
macos-ui/Uninstaller/Moonshot Uninstaller/Assets.xcassets/background_logo.imageset/: Contents.json
macos-ui/Uninstaller/Moonshot Uninstaller/Base.lproj/: MainMenu.xib
macos-ui/Uninstaller/Moonshot Uninstaller/Moonshot Uninstaller/: Info.plist
macos-ui/Uninstaller/Uninstall Moonshot.xcodeproj/: project.pbxproj
macos-ui/Uninstaller/Uninstall Moonshot.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macos-ui/libmoonshot/: libmoonshot.c  libmoonshot.h
macos-ui/moonshot_mac_util/: Makefile  client.c  server.c
moonshot_mac_util/: MoonshotGetIdentityScipt.scpt  a.out  client  moonshot_mac_util.c  server
ms-identity-manager-ui/: main.vala  ms-identity-manager-ui.mdproj
ms-identity-server/: main.vala  ms-identity-server.mdproj
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  moonshot-ui.pot  moonshot.pot
src/: dbus-client.c  dbus-client.vala  moonshot-add-dialog.c  moonshot-add-dialog.vala  moonshot-crypto-utils.c  moonshot-custom-vbox.c  moonshot-custom-vbox.vala  moonshot-dbus-server.c  moonshot-dbus-server.vala  moonshot-futils.c  moonshot-id.c  moonshot-id.vala  moonshot-idcard-generator.c  moonshot-idcard-store.c  moonshot-idcard-store.vala  moonshot-idcard-widget.c  moonshot-idcard-widget.vala  moonshot-idcard.vala  moonshot-identities-manager.c  moonshot-identities-manager.vala  moonshot-identity-dialog.c  moonshot-identity-dialog.vala  moonshot-identity-management-cli.vala  moonshot-identity-management-interface.vala  moonshot-identity-management-view.c  moonshot-identity-management-view.vala  moonshot-identity-manager-app.c  moonshot-identity-manager-app.vala  moonshot-identity-request.c  moonshot-identity-request.vala  moonshot-keyring-store-base.vala  moonshot-keyring-store-gnome.vala  moonshot-keyring-store-secret.vala  moonshot-keyring-store.c  moonshot-keyring-store.vala  moonshot-keyring-tool.vala  moonshot-local-flat-file-store.c  moonshot-local-flat-file-store.vala  moonshot-logger.c  moonshot-logger.vala  (+31 more)
tests/: basic.bash  basic.c
vapi/: gtk-mac-integration.vapi  libnewt.vapi  libsecret-1.vapi.dis  moonshot-gnome-keyring.vapi  moonshot-msrpc.vapi
webprovisioning/: blank-test.msht  cert-test.msht  complex-test.msht  default-identity.msht  moonshot.xml  sample.msht
windows/: app.wxs  config.wxi  jhbuildrc
(+143 files in other folders)
